# Feed

./: .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  LICENSE  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  Structure.mermaid  VIRAL_SIMULATION.md  __init__.py  example_simulation.py  feed_models.py  feed_utils.py  main.py  pyproject.toml  requirements.txt  setup.py  simulation.py
docs/: PACKAGE_STRUCTURE.md  USAGE.md  feed_model.mmd
examples/: basic_usage.py  simulation_demo.py  viral_simulation_example.py
feed/: __init__.py  models.py  py.typed  utils.py
feeds/: feed-20251105_235549-1762404949331336295.json  feed-20251105_235549-1762404949332140776.json  feed-20251105_235549-1762404949332259023.json  feed-20251105_235549-1762404949332343213.json  feed-20251105_235549-1762404949332726711.json  feed-20251105_235549-1762404949332744660.json  feed-20251105_235549-1762404949333201283.json  feed-20251105_235549-1762404949333478041.json  feed-20251105_235549-1762404949333734441.json  feed-20251105_235549-1762404949333753679.json  feed-20251105_235549-1762404949334794884.json  feed-20251105_235626-1762404986933206598.json  feed-20251105_235626-1762404986933438912.json  feed-20251105_235626-1762404986933596835.json  feed-20251105_235626-1762404986933622504.json  feed-20251105_235626-1762404986933738473.json  feed-20251105_235626-1762404986933966637.json  feed-20251105_235626-1762404986934408901.json  feed-20251105_235626-1762404986934481757.json  feed-20251105_235626-1762404986934912507.json  feed-20251105_235626-1762404986935265766.json  (+2 more)
(+37 files in other folders)
